--- a/.gitignore
+++ b/.gitignore
@@ -33,10 +33,10 @@ google-services.json
 *.hprof
 
 # Additional IntelliJ/Android Studio configurations
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
+.idea/caches
+.idea/libraries
+.idea/modules.xml
+.idea/workspace.xml
+.idea/navEditor.xml
+.idea/assetWizardSettings.xml
 .DS_Store
