--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
 
 android {
     compileSdk 34
+    namespace 'com.synclytic.app'
 
     defaultConfig {
         applicationId "com.synclytic.app"
@@ -32,14 +33,16 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.appcompat:appcompat:1.5.0'
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation("androidx.recyclerview:recyclerview:1.2.1")
-    implementation("androidx.compose.ui:ui:1.0.5")
-    implementation("androidx.compose.material3:material3:1.0.0")
+
+    // Existing dependencies
+    implementation "androidx.recyclerview:recyclerview:1.2.1"
+    implementation "androidx.compose.ui:ui:1.0.5"
+    implementation "androidx.compose.material3:material3:1.0.0"
 }
